# nonebot-plugin-savepic

./: .gitignore  README.md  model.py  pyproject.toml
nonebot_plugin_savepic/: __init__.py  ai_utils.py  chat.py  command.py  config.py  countpic.py  ext_listener.py  fun.py  listpic.py  model.py  mvpic.py  pic_sql.py  picture.py  randpic.py  rule.py
nonebot_plugin_savepic/core/: error.py  fileio.py  model.py  sql.py  types.py  utils.py
nonebot_plugin_savepic/migrations/: 1a654e02179b_.py
nonebot_plugin_savepic/networks/: resnet_big.py
