[tool.poetry]
name = "nonebot-plugin-savepic"
version = "0.4.1"
description = "保存表情包（语录）与随机出图"
authors = ["Yan <1964649083@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot_plugin_savepic" }]
homepage = "https://github.com/Yan-Zero/nonebot-plugin-savepic"

[tool.poetry.dependencies]
python = "^3.11"
nonebot2 = "^2.4.0"
asyncpg = "^0.28.0"
nonebot-adapter-onebot = "^2.4.6"
arclet-alconna = "^1.7.14"
pillow = "^10.0.0"
dashscope = "^1.17.0"
pinecone-client = "^3.2.2"
numpy = "^2.1.3"
scipy = "^1.14.1"
sqlalchemy = "^2.0.36"
httpx = "^0.27.2"
openai = "^1.54.4"
pyyaml = "^6.0.2"

[tool.poetry.dev-dependencies]
setuptools = "^75.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
