[tool.pdm.dev-dependencies]
dev = ["setuptools<76.0.0,>=75.5.0"]
[tool.pdm.build]
includes = ["nonebot_plugin_savepic"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [{ name = "Yan", email = "1964649083@qq.com" }]
license = { text = "MIT" }
requires-python = "<4.0,>=3.11"
dependencies = [
    "nonebot2<3.0.0,>=2.4.0",
    "asyncpg<1.0.0,>=0.28.0",
    "nonebot-adapter-onebot<3.0.0,>=2.4.6",
    "numpy<3.0.0,>=2.1.3",
    "httpx<1.0.0,>=0.28.0",
    "nonebot-plugin-alconna>=0.59.4",
]
name = "nonebot-plugin-savepic"
version = "0.6.4"
description = "保存表情包（语录）与随机出图"
readme = "README.md"

[project.urls]
homepage = "https://github.com/Yan-Zero/nonebot-plugin-savepic"

[dependency-groups]
dev = ["setuptools<76.0.0,>=75.5.0"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
